--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <title>Pranav Jadhav</title>
 </head>
-<body>
+
+<body onload="loader()">
+  <div id="loading"></div>
+
   <div class="container">
     <nav class="navigation">
       <div class="logo"></div>
@@ -107,7 +110,6 @@
   </div>
 
 </body>
-
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="index.js"></script>
 </html>
