--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
   <div class="container">
     <nav class="navigation">
       <div class="logo">PJ.</div>
-      <div class="navbar_link" onclick="activeClass(event)">
-        <a class="hover-3 active" href="javascript:void(0)"><svg stroke="currentColor" fill="currentColor"
+      <div class="navbar_link">
+        <a class="hover-3 active" href="index.html"><svg stroke="currentColor" fill="currentColor"
             stroke-width="0" viewBox="0 0 1024 1024" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"
             style="margin-bottom: 2px;">
             <path
