--- a/public/Resume.html
+++ b/public/Resume.html
@@ -37,7 +37,8 @@
               d="M904 160H548V96c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H120c-17.7 0-32 14.3-32 32v520c0 17.7 14.3 32 32 32h356.4v32L311.6 884.1c-3.7 2.4-4.7 7.3-2.3 11l30.3 47.2v0.1c2.4 3.7 7.4 4.7 11.1 2.3L512 838.9l161.3 105.8c3.7 2.4 8.7 1.4 11.1-2.3v-0.1l30.3-47.2c2.4-3.7 1.3-8.6-2.3-11L548 776.3V744h356c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32z m-40 512H160V232h704v440z">
             </path>
           </svg> Projects</a>
-        <a class="hover-3 active" href="Resume.html"><svg stroke="currentColor" fill="none" stroke-width="0"
+        <a class="hover-3 active" href="Resume.html">
+          <svg stroke="currentColor" fill="none" stroke-width="0"
             viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg" style="margin-bottom: 2px;">
             <path d="M7 18H17V16H7V18Z" fill="currentColor"></path>
             <path d="M17 14H7V12H17V14Z" fill="currentColor"></path>
