Remove loader function

--- a/public/projects.html
+++ b/public/projects.html
@@ -15,7 +15,7 @@
   <title>Pranav Jadhav</title>
 </head>
 
-<body onload="loader()">
+<body>
   <div class="loader">
     <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
   </div>
