resume download options fixing

--- a/public/Resume.html
+++ b/public/Resume.html
@@ -69,7 +69,7 @@
     </nav>
     <div class="resume">
       <div class="links">
-        <a href="/public/assets/resumes/Pranav_Jadhav_Resume_26_JULY_2022.pdf" download>
+        <a href="/public/assets/resumes/Pranav_Jadhav_Resume_26_JULY_2022.pdf" download="Pranav_Jadhav_Resume_26_JULY_2022">
           <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
             x="0px" y="0px" viewBox="0 0 330 330" style="enable-background:new 0 0 330 330;" xml:space="preserve">
             <g>
@@ -105,7 +105,7 @@
       <!-- <img src="assets/resume.png" alt="" class="images_download_cv"> -->
       <iframe src="https://drive.google.com/file/d/1lmvXmZ9JpA-OAsKeDQ3oUz-36oxzo_tJ/preview" width="640" height="850" style="width: 100%;" allow="autoplay"></iframe>
       <div class="links"> 
-        <a href="/public/assets/resumes/Pranav_Jadhav_Resume_26_JULY_2022.pdf" download >
+        <a href="/public/assets/resumes/Pranav_Jadhav_Resume_26_JULY_2022.pdf" download="Pranav_Jadhav_Resume_26_JULY_2022" >
           <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" viewBox="0 0 330 330" style="enable-background:new 0 0 330 330;" xml:space="preserve">
           <g>
