--- a/public/Resume.html
+++ b/public/Resume.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="icon" type="image/png" href="./assets/Icon1.png">
   <title>Pranav Jadhav</title>
 </head>
 
@@ -69,7 +70,7 @@
     </nav>
     <div class="resume">
       <div class="links">
-        <a href="https://drive.google.com/drive/u/0/folders/17TTjRlZGYVuqqVJ5PXxaVMzoTZz68D5i"  >
+        <a href="https://drive.google.com/file/d/1jhqEDUHJtuiw3fd29LfMSda9UcotRX7h/view?usp=sharing"  >
           <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
             x="0px" y="0px" viewBox="0 0 330 330" style="enable-background:new 0 0 330 330;" xml:space="preserve">
             <g>
@@ -103,9 +104,10 @@
         </a>
       </div>
       <!-- <img src="assets/resume.png" alt="" class="images_download_cv"> -->
-      <iframe src="https://drive.google.com/file/d/1lmvXmZ9JpA-OAsKeDQ3oUz-36oxzo_tJ/preview" width="640" height="850" style="width: 100%;" allow="autoplay"></iframe>
+
+      <iframe src="https://drive.google.com/file/d/1jhqEDUHJtuiw3fd29LfMSda9UcotRX7h/preview" allow="autoplay" style="width: 100%; height:850px;"></iframe>
       <div class="links"> 
-        <a href="https://drive.google.com/drive/u/0/folders/17TTjRlZGYVuqqVJ5PXxaVMzoTZz68D5i"  >
+        <a href="https://drive.google.com/file/d/1jhqEDUHJtuiw3fd29LfMSda9UcotRX7h/view?usp=sharing"  >
           <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" viewBox="0 0 330 330" style="enable-background:new 0 0 330 330;" xml:space="preserve">
           <g>
