--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+   <link rel="icon" type="image/png" href="./assets/Icon1.png">
   <title>Pranav Jadhav</title>
 </head>
 
@@ -124,19 +125,17 @@
           since.
         </div>
         <div class="p2">
-          I really liked to build stuff using no-code tools
-          back in 2010, and from that, I explored how to code myself, fast-forward to today, I do programming in various
+          I explored how to code myself, fast-forward to today, I do programming in various
           languages and technologies, and had the privilege to worked in a B2B Company
           and a Recruitment Company
-          I'm interested in building something awesome with code and automate tasks with code, currently focused on Web
-          & Mobile Development,
+          I'm interested in building something awesome with code and automate tasks with code, currently focused on blockchain
+          & Web Development,
           Open Source
           and Competitive Programming
         </div>
         <div class="p3">
 
-          When I'm not coding I play games with my friends, watch some show on Netflix, or if the weather's good, play
-          basketball! 🏀
+          When I'm not coding I play games with my friends, watch some show on Netflix
         </div>
       </section>
       <section class="photos">
