--- a/public/Resume.html
+++ b/public/Resume.html
@@ -70,7 +70,7 @@
     </nav>
     <div class="resume">
       <div class="links">
-        <a href="https://drive.google.com/file/d/1jhqEDUHJtuiw3fd29LfMSda9UcotRX7h/view?usp=sharing"  >
+        <a href="https://drive.google.com/file/d/1sO_a79jPoQBYeH39uT9qALaAJD_keNc2/view"  >
           <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
             x="0px" y="0px" viewBox="0 0 330 330" style="enable-background:new 0 0 330 330;" xml:space="preserve">
             <g>
@@ -105,9 +105,9 @@
       </div>
       <!-- <img src="assets/resume.png" alt="" class="images_download_cv"> -->
 
-      <iframe src="https://drive.google.com/file/d/1jhqEDUHJtuiw3fd29LfMSda9UcotRX7h/preview" allow="autoplay" style="width: 100%; height:850px;"></iframe>
+      <iframe src="https://drive.google.com/file/d/1sO_a79jPoQBYeH39uT9qALaAJD_keNc2/preview" allow="autoplay" style="width: 100%; height:850px;"></iframe>
       <div class="links"> 
-        <a href="https://drive.google.com/file/d/1jhqEDUHJtuiw3fd29LfMSda9UcotRX7h/view?usp=sharing"  >
+        <a href="https://drive.google.com/file/d/1sO_a79jPoQBYeH39uT9qALaAJD_keNc2/view?usp=sharing"  >
           <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" viewBox="0 0 330 330" style="enable-background:new 0 0 330 330;" xml:space="preserve">
           <g>
