Final Commit 6 SEPT 2022

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-   <link rel="icon" type="image/png" href="./assets/Icon1.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
   <title>Pranav Jadhav</title>
 </head>
 
@@ -77,7 +78,6 @@
       <p class="hey_there">Hey there!,I'm - </p>
       <p class="name">Pranav Jadhav.</p>
       <p class="description">Full Stack Developer.<span class="color_grey"> A self-taught Developer with an<br> interest in Computer science</span></p>
-      <!-- <img src="./assets/design_1.svg" alt="" srcset="" class="filter_green"> -->
       <div class="requirement">
         <p>🚀 Exploring opportunities and side projects.</p>
         <p>🎓 Currently an Computer Engineer Student at AISSMS COE,PUNE.</p>
@@ -126,8 +126,7 @@
         </div>
         <div class="p2">
           I explored how to code myself, fast-forward to today, I do programming in various
-          languages and technologies, and had the privilege to worked in a B2B Company
-          and a Recruitment Company
+          languages and technologies, and had the privilege to worked in a B2B Company - Emvoke Technologies.
           I'm interested in building something awesome with code and automate tasks with code, currently focused on blockchain
           & Web Development,
           Open Source
