--- a/public/Resume.html
+++ b/public/Resume.html
@@ -106,7 +106,7 @@
       </div>
       <!-- <img src="assets/resume.png" alt="" class="images_download_cv"> -->
 
-      <iframe src="https://drive.google.com/file/d/1lC3cq4-5hoA8KDDIHPhxKI98FNA7RrnK/preview" width="640" height="480" allow="autoplay"></iframe>
+      <iframe src="https://drive.google.com/file/d/1lC3cq4-5hoA8KDDIHPhxKI98FNA7RrnK/preview"  style="width: 100%; height:850px;" allow="autoplay"></iframe>
       <div class="links"> 
         <a href="https://drive.google.com/file/d/1lC3cq4-5hoA8KDDIHPhxKI98FNA7RrnK/view?usp=sharing"  >
           <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
